fix div-overlapped links with z-index

--- a/public/stylesheet2.css
+++ b/public/stylesheet2.css
@@ -53,29 +53,36 @@ body {
   /*margin-top: 10px;*/
   /*padding-top: 10px;*/
   border: 1px solid #4433D1;
+
+  /*z-index: 1;*/
   /*position: fixed;*/
   /*top: 40px;*/
   /*right: 100px;*/
   /*display: block;*/
 }
 
-/*.navi.affix {
-  left: 0;
+.navi.affix {
+/*  left: 0;
   right: 0;
-  width: 90%;
-}*/
+  width: 90%;*/
+  z-index: 4;
+}
 
 nav {
   padding-top: 10px;
+  /*z-index: 1;*/
+    z-index: 4;
 }
 
 li {
   margin-left: 15px;
+
 }
 
 ul li {
   padding: 0;
   font-size: 1.3em;
+
 }
 
 .content {
@@ -115,6 +122,7 @@ ul li {
   background-repeat: no-repeat;
   /*background-attachment: fixed;*/
   padding-top: 50px;
+  /*z-index: -1;*/
 }
 
 #projects {
@@ -138,10 +146,12 @@ ul li {
 
 .slick-prev {
   margin-left: 15px;
+  z-index: 1;
 }
 
 .slick-next {
   margin-right: 15px;
+  z-index: 1;
 }
 
 .slick-prev:before {
@@ -149,10 +159,12 @@ ul li {
   font-family: 'FontAwesome';
   font-size: 22px;
   color: black;
+  /*z-index: 1;*/
 }
 .slick-next:before {
   content: "\f061";
   font-family: 'FontAwesome';
   font-size: 22px;
   color: black;
+  /*z-index: 1;*/
 }
